--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <li>Assignment 1C</li>
             <ul>
                 <li><a href="D:\Web\formhtml.html", target="_blank">Activity 6a</a></li>
-                <li><a href="D:\Web\chatgpt.html", target="_blank">Activity 6b</a></li>
+                <li><a href="D:\Web\form.html", target="_blank">Activity 6b</a></li>
                 <li><a href="D:\Web\divandspan.html", target="_blank">Activity 7</a></li>
                 <li>Activity 8</li>
             </ul>
@@ -100,7 +100,7 @@
         <li>Assignment 2A</li>
             <ul>
                 <li><a href="D:\Web\activity 11.html", target="_blank">Activity 11</a></li>
-                <li><a href="D:\Web\semantichtml.html", targert="_blank">Activity 12</a></li>
+                <li><a href="D:\Web\index.html", targert="_blank">Activity 12</a></li>
             </ul>
     </ul>
     </section><br>
