--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
         <li>Assignment 1B</li>
             <ul>
                 <li><a href="D:\Web\Images\23bce2034_assesment (1).pdf", target="_blank">Activity 4</a></li>
-                <li><a href="D:\Web\chatgpt.html", target="_blank">Activity 5</a></li>
+                <li><a href="D:\Web\Images\Recording 2025-01-21 125542.mp4", target="_blank">Activity 5</a></li>
             </ul>
         <li>Assignment 1C</li>
             <ul>
                 <li><a href="D:\Web\formhtml.html", target="_blank">Activity 6a</a></li>
-                <li><a href="D:\Web\form.html", target="_blank">Activity 6b</a></li>
+                <li><a href="D:\Web\chatgpt.html", target="_blank">Activity 6b</a></li>
                 <li><a href="D:\Web\divandspan.html", target="_blank">Activity 7</a></li>
-                <li>Activity 8</li>
+                <li><a href="D:\Web\index.html", target="_blank">Activity 8</a></li>
             </ul>
         <li>Assignment 2A</li>
             <ul>
@@ -106,9 +106,7 @@
     </section><br>
     <section id="blog">
         <h2>Blog Page</h2>
-        <p>Check out our latest host website on Github.</p>
-        <img src="example.jpg" alt="Example Image" width="100%">
-        <p>Watch our <a href="https://example.com/video">latest video</a>.</p>
+        <p>Watch our video report about Hosting Website on GitHub <a href="D:\Web\Images\Recording 2025-01-21 125542.mp4">click here</a>.</p>
     </section><br>
     <footer id="contact">
         <h2>Contact Us</h2>
